alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-Context-Path-Routing
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: interview
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port 
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class                       
  rules:
    - http:
        paths:           
          - path: /de
            pathType: Prefix
            backend:
              service:
                name: de
                port: 
                  number: 80
          - path: /es
            pathType: Prefix
            backend:
              service:
                name: hello-world-es
                port: 
                  number: 80
          - path: /fr
            pathType: Prefix
            backend:
              service:
                name: hello-world-fr
                port: 
                  number: 80
